Verif/Test/Invalide/test_erreur_3.76-11.deca
// Description:
//    Programme soulevant l'erreur (3.76)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'boolean' et 'String' sont incompatibles avec l'opérateur binaire '!=' (règle 3.76)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

boolean i;
{
   i = true != "a";
}